Bug 695543 - gs %stdin segfaults
Summary: gs %stdin segfaults
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: General (show other bugs)
Version: master
Hardware: PC Linux
: P4 major
Assignee: Chris Liddell (chrisl)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-26 18:25 UTC by Edward Z. Yang
Modified: 2014-09-27 01:21 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Edward Z. Yang 2014-09-26 18:25:12 UTC
Steps to reproduce:

ezyang@sabre:~$ Dev/ghostpdl/gs/bin/gs %stdin
GPL Ghostscript GIT PRERELEASE 9.16 (2014-09-22)
Copyright (C) 2014 Artifex Software, Inc.  All rights reserved.
This software comes with NO WARRANTY: see the file PUBLIC for details.
Segmentation fault (core dumped)

Expected result: It doesn't segfault.

This bug is pretty old, it affects versions as early as 9.10. https://bugs.launchpad.net/ubuntu/+source/ghostscript/+bug/1374271
Comment 1 Chris Liddell (chrisl) 2014-09-27 01:21:44 UTC
Fixed in:
http://git.ghostscript.com/?p=ghostpdl.git;a=commitdiff;h=9ef2c818